# ena-dh-scripts

./: README.md  prepare_dh_output.py  pyproject.toml  submit_sample.py  submit_study.py
tests/: test_ena_common.py  test_submit_sample.py  test_submit_study.py
